# v2x-msg-validator

./: .gitignore  README.md  pyproject.toml
notebooks/: demo.ipynb
samples/: sampleMAP.yaml  samplePSM.yaml  sampleSPAT.yaml  sampleTIM.yaml
src/v2x_msg_validator/: __init__.py  logger_config.py
src/v2x_msg_validator/cli/: compile.py
src/v2x_msg_validator/validator/: __init__.py  codec.py  j2735_202409.py  validator.py
test/: README.md
test/j2735_202409/: conftest.py  test_MAP.py  test_PSM.py  test_SPAT.py  test_TIM.py
test/j2735_202409/fixtures/: MAP.yaml  MAP_full.yaml  PSM.yaml  SPAT.yaml  TIM.yaml
